# immerse-rt

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
apps/: Cargo.toml
apps/app/: Cargo.toml
apps/app-protocol/: Cargo.toml
apps/app-protocol/src/: token.rs
apps/app/src/: main.rs
apps/client-app-receiver/: CMakeLists.txt  Cargo.toml  cbindgen.toml  main.cpp
apps/client-app-receiver/app/: app_instance.cpp  app_instance.h  constants.h  exceptions.h  main.cpp  publisher_controller.cpp  publisher_controller.h  qml_utils.h  subscriber_controller.cpp  subscriber_controller.h  utils.h
apps/client-app-receiver/lib/: CMakeLists.txt  Cargo.toml  cbindgen.toml
apps/client-app-receiver/lib/config/: clang.h  generic.h
apps/client-app-receiver/lib/src/: interop.rs  lib.rs  stream.rs
apps/client-app-receiver/lib/src/interop/: request.rs  stream.rs
apps/client-app-receiver/lib/src/interop/stream/: publisher.rs  subscriber.rs
apps/client-app-receiver/lib/src/stream/: publisher.rs  subscriber.rs
apps/client-app-receiver/res/: PublisherView.qml  SubscriberView.qml  main.qml  qml.qrc
apps/client-app-receiver/src/: client.rs  interop.rs  lib.rs  main.rs  stream.rs  utils.rs
apps/webrtc-server/: Cargo.toml
apps/webrtc-server/requests/: RequestSubToken.http  RequestToken.http
apps/webrtc-server/src/: app.rs  main.rs  payload.rs
cmake/: Dependencies.cmake  Prelude.cmake  ProjectInfo.cmake  Version.cmake
cmake/preludes/: MacOS.cmake
crates/: CMakeLists.txt
crates/app/: Cargo.toml
crates/ht/interface/: Cargo.toml
crates/ht/platform/: CMakeLists.txt
crates/ht/platform/core-motion/: .gitignore  Cargo.toml
crates/space/: Cargo.toml
crates/space/src/: lib.rs
crates/spatializer/: Cargo.toml
crates/spatializer/src/: lib.rs
crates/spatializer/tests/: spatializer.rs
impls/ht/: CMakeLists.txt  README.md
impls/ht/api/: Cargo.toml
impls/ht/api/src/: lib.rs
impls/ht/core-motion/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
impls/ht/core-motion/cmake/: config.toml.in  objc-bridging-header.h.in
impls/ht/core-motion/cmake/autogen/: mod.rs.in
impls/ht/core-motion/src/: lib.rs
impls/ht/core-motion/swift/: CMakeLists.txt  lib.swift
impls/renderers/: README.md
impls/renderers/gst/: Cargo.toml
impls/renderers/gst/src/: lib.rs
libs/: Cargo.toml
libs/ht/: Cargo.toml
libs/ht/src/: lib.rs
libs/lin-alg/: Cargo.toml
libs/lin-alg/src/: lib.rs
libs/space/: Cargo.toml
libs/space/src/: lib.rs
libs/spatial/: Cargo.toml
libs/spatial/src/: lib.rs
libs/spatial/tests/: spatial.rs  spatializer.rs
src/app/: Cargo.toml
src/app/src/: main.rs
src/ht/: CMakeLists.txt  README.md
src/ht/bridge/: CMakeLists.txt  Cargo.toml  build.rs
src/ht/bridge/src/: lib.rs
src/ht/core-motion/: CMakeLists.txt
src/ht/core-motion/config/: Info.plist.in
src/ht/interface/: Cargo.toml
src/ht/interface/src/: lib.rs
src/ht/platform/core-motion/: CMakeLists.txt  Cargo.toml  README.md  main.swift
src/ht/platform/core-motion/cmake/: config.toml.in
src/ht/platform/core-motion/src/: lib.rs
src/ht/platform/core-motion/swift/: CMakeLists.txt
