[package]
name = "client-frontend-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
gst = { package = "gstreamer", version = "0.22.5" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.61"
ureq = { version = "2.9.7", features = ["json"] }
app-protocol = { path = "../../app-protocol" }
url = "2.5.0"
irt-ht-api = { path = "../../../impls/ht/api" }
irt-spatial = { path = "../../../libs/spatial" }
irt-gst-renderer = { path = "../../../impls/renderers/gst" }

[lib]
crate-type = ["cdylib"]
